Mudança na Ortografia
Foi Resolvido erro de digitação

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
 
         <h3 class="personalizarresumo">
             A POPEE tem cronogramas pré-feitos para facilitar sua vida. Com funções
-            futuras, você pode-rá fazer sua própria rotina de estudos
+            futuras, você poderá fazer sua própria rotina de estudos
         </h3>
         
              <button class="botaocronograma">Ver cronogramas</button>
@@ -166,7 +166,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
             <div class="footer-container">
                 <h3>Informações legais</h3>
                 <ul class="list">
-                    <li><a href="">Termos & Codinções</a></li>
+                    <li><a href="">Termos & Condições</a></li>
                     <li><a href="">Privacidade e Segurança</a></li>
                     <li><a href="">Termos de Cookies</a></li>
                 </ul>
