--- a/home.html
+++ b/home.html
@@ -11,10 +11,8 @@
 <header class="dashboard">
     <div class="dashboard-top">
         <div class="user">
-            <div class="user-avatar">A</div>
             <div class="user-text">
-                <span>Bom dia</span>
-                <strong>Aluno</strong>
+                <h1>Olá, Aluno 👋</h1>
             </div>
         </div>
         <button class="notify">
@@ -23,31 +21,36 @@
     </div>
 
     <div class="progress">
-        <h3>Seu Progresso</h3>
+        <h3>Veja seu painel de progresso</h3>
         <div class="progress-cards">
-            <div class="progress-item">
+            <div class="progress-item simulado">
+                <h6 class="dash-tittle">Simulados</h6>
                 <strong>0</strong>
-                <span>Simulados</span>
+                <span>Realizados</span>
             </div>
-            <div class="progress-item">
+            <div class="progress-item concluido">
+                <h6 class="dash-tittle">Estudos</h6>
                 <strong>0</strong>
-                <span>Acertos</span>
+                <span>Realizados</span>
             </div>
-            <div class="progress-item">
+            <div class="progress-item aproveitamento">
+                <h6 class="dash-tittle">Aproveitamento</h6>
                 <strong>0%</strong>
-                <span>Aproveitamento</span>
+                <progress
+                    value="100" max="100">
+                </progress>
             </div>
         </div>
     </div>
 </header>
 
-<!-- Seção de Acesso Rápido -->
+<!--Acesso Rápido -->
     <main class="main-content">
         <h3 class="section-title">Acesso Rápido</h3>
 
         <div class="quick-access-grid">
             <a href="#" class="access-card card-pink">
-                <div class="card-icon">
+                <div class="card-icon sim">
                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                         <path d="M4 19.5A2.5 2.5 0 0 1 6.5 17H20"></path>
                         <path d="M6.5 2H20v20H6.5A2.5 2.5 0 0 1 4 19.5v-15A2.5 2.5 0 0 1 6.5 2z"></path>
@@ -58,7 +61,7 @@
             </a>
 
             <a href="#" class="access-card card-blue">
-                <div class="card-icon">
+                <div class="card-icon vid">
                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                         <polygon points="23 7 16 12 23 17 23 7"></polygon>
                         <rect x="1" y="5" width="15" height="14" rx="2" ry="2"></rect>
@@ -69,7 +72,7 @@
             </a>
 
             <a href="#" class="access-card card-purple">
-                <div class="card-icon">
+                <div class="card-icon blo">
                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                         <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"></path>
                         <polyline points="14 2 14 8 20 8"></polyline>
@@ -80,7 +83,7 @@
             </a>
 
             <a href="#" class="access-card card-blue-alt">
-                <div class="card-icon">
+                <div class="card-icon mat">
                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                         <path d="M2 3h6a4 4 0 0 1 4 4v14a3 3 0 0 0-3-3H2z"></path>
                         <path d="M22 3h-6a4 4 0 0 0-4 4v14a3 3 0 0 1 3-3h7z"></path>
@@ -91,7 +94,7 @@
             </a>
 
             <a href="#" class="access-card card-orange">
-                <div class="card-icon">
+                <div class="card-icon dic">
                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                         <circle cx="12" cy="12" r="10"></circle>
                         <path d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"></path>
@@ -103,7 +106,7 @@
             </a>
 
             <a href="#" class="access-card card-green">
-                <div class="card-icon">
+                <div class="card-icon pro">
                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                         <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"></path>
                         <polyline points="14 2 14 8 20 8"></polyline>
@@ -118,14 +121,22 @@
         </div>
     </main>
 
-    <!-- Bottom Navigation -->
+    <!-- Nav -->
     <nav class="bottom-nav">
-        <a href="#" class="nav-item active">
+        <a href="home.html" class="nav-item active">
             <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
                 <path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"></path>
                 <polyline points="9 22 9 12 15 12 15 22"></polyline>
             </svg>
             <span>Início</span>
+        </a>
+        
+        <a href="#" class="nav-item">
+            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                <path d="M2 3h6a4 4 0 0 1 4 4v14a3 3 0 0 0-3-3H2z"></path>
+                <path d="M22 3h-6a4 4 0 0 0-4 4v14a3 3 0 0 1 3-3h7z"></path>
+            </svg>
+            <span>Matérias</span>
         </a>
 
         <a href="#" class="nav-item">
@@ -144,13 +155,7 @@
             <span>Blog</span>
         </a>
 
-        <a href="#" class="nav-item">
-            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                <path d="M2 3h6a4 4 0 0 1 4 4v14a3 3 0 0 0-3-3H2z"></path>
-                <path d="M22 3h-6a4 4 0 0 0-4 4v14a3 3 0 0 1 3-3h7z"></path>
-            </svg>
-            <span>Matérias</span>
-        </a>
+
 
         <a href="#" class="nav-item">
             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
