Atualização da página de matérias do site. Colocados novos modelos de cards, aprimoramento na vizualização do conteúdo e uso do minimalismo no design. Páginas ainda não linkadas.

--- a/matérias.html
+++ b/matérias.html
@@ -8,117 +8,146 @@
 </head>
 <body>
 
-<header class="dashboard">
+<div class="content">
+    <header class="dashboard">
     <div class="dashboard-top">
         <div class="user">
+            <div class="back">
+                <div class="arrow">
+                   <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-arrow-left mr-2 h-4 w-4"><path d="m12 19-7-7 7-7"></path><path d="M19 12H5"></path></svg>
+                   <path d="m12 19-7-7 7-7"></path>
+                   <path d="M19 12H5"></path>
+                    <!--←-->
+                </div>
+                <div class="back-tittle">
+                    <h4>Voltar</h4>
+                </div>
+                
+            </div>
             <div class="user-text">
                 <h1>Matérias 📚</h1>
-            </div>
-        </div>
-        <button class="notify">
-            🔔
-        </button>
-    </div>
-
-    <div class="progress">
-        <h3>Acompanhe seu desempenho</h3>
-        <div class="progress-cards">
-            <div class="progress-item simulado">
-                <h6 class="dash-tittle">Disciplinas</h6>
-                <strong>12</strong>
-                <span>Totais</span>
-            </div>
-            <div class="progress-item concluido">
-                <h6 class="dash-tittle">Concluídas</h6>
-                <strong>8</strong>
-                <span>Matérias</span>
-            </div>
-            <div class="progress-item aproveitamento">
-                <h6 class="dash-tittle">Progresso</h6>
-                <strong>66%</strong>
-                <progress value="66" max="100"></progress>
             </div>
         </div>
     </div>
 </header>
 
 <main class="main-content">
-    <h3 class="section-title">Matérias Disponíveis</h3>
+    <h3 class="section-title">Todas as matérias</h3>
+    <hr>
+    <h3 class="section-title">12 matérias</h3>
 
     <div class="quick-access-grid">
         <a href="#" class="access-card card-pink">
-            <div class="card-icon sim">📚</div>
+            <div class="card-icon">📚</div>
             <h4>Português</h4>
-            <p>Gramática e Literatura</p>
+            <div class="mini-arrow">
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-chevron-right h-5 w-5 text-muted-foreground"><path d="m9 18 6-6-6-6"></path></svg>
+            <path d="m9 18 6-6-6-6"></path>
+        </div>
         </a>
 
-        <a href="#" class="access-card card-blue">
-            <div class="card-icon mat">🔢</div>
+        <a href="#" class="access-card card-pink">
+            <div class="card-icon">🔢</div>
             <h4>Matemática</h4>
-            <p>Álgebra e Geometria</p>
+            <div class="mini-arrow">
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-chevron-right h-5 w-5 text-muted-foreground"><path d="m9 18 6-6-6-6"></path></svg>
+            <path d="m9 18 6-6-6-6"></path>
+        </div>
         </a>
 
-        <a href="#" class="access-card card-purple">
-            <div class="card-icon vid">⚛️</div>
+
+        <a href="#" class="access-card card-pink">
+            <div class="card-icon">⚛️</div>
             <h4>Física</h4>
-            <p>Cinemática e Dinâmica</p>
+            <div class="mini-arrow">
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-chevron-right h-5 w-5 text-muted-foreground"><path d="m9 18 6-6-6-6"></path></svg>
+            <path d="m9 18 6-6-6-6"></path>
+        </div>
         </a>
 
-        <a href="#" class="access-card card-blue-alt">
-            <div class="card-icon blo">🧪</div>
+        <a href="#" class="access-card card-pink">
+            <div class="card-icon">🧪</div>
             <h4>Química</h4>
-            <p>Elementos e Reações</p>
+            <div class="mini-arrow">
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-chevron-right h-5 w-5 text-muted-foreground"><path d="m9 18 6-6-6-6"></path></svg>
+            <path d="m9 18 6-6-6-6"></path>
+        </div>
         </a>
 
-        <a href="#" class="access-card card-orange">
-            <div class="card-icon dic">🏛️</div>
+        <a href="#" class="access-card card-pink">
+            <div class="card-icon">🏛️</div>
             <h4>História</h4>
-            <p>Eventos e Períodos</p>
+            <div class="mini-arrow">
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-chevron-right h-5 w-5 text-muted-foreground"><path d="m9 18 6-6-6-6"></path></svg>
+            <path d="m9 18 6-6-6-6"></path>
+        </div>
         </a>
 
         <a href="#" class="access-card card-pink">
-            <div class="card-icon pro">🌍</div>
+            <div class="card-icon">🌍</div>
             <h4>Geografia</h4>
-            <p>Clima e Paisagismo</p>
-        </a>
-
-        <a href="#" class="access-card card-blue">
-            <div class="card-icon sim">🗣️</div>
-            <h4>Inglês</h4>
-            <p>Conversação e Escrita</p>
-        </a>
-
-        <a href="#" class="access-card card-purple">
-            <div class="card-icon mat">⚽</div>
-            <h4>Educação Física</h4>
-            <p>Esportes e Saúde</p>
-        </a>
-
-        <a href="#" class="access-card card-blue-alt">
-            <div class="card-icon vid">🧬</div>
-            <h4>Biologia</h4>
-            <p>Células e Evolução</p>
-        </a>
-
-        <a href="#" class="access-card card-orange">
-            <div class="card-icon blo">🤔</div>
-            <h4>Filosofia</h4>
-            <p>Pensadores e Ideias</p>
+            <div class="mini-arrow">
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-chevron-right h-5 w-5 text-muted-foreground"><path d="m9 18 6-6-6-6"></path></svg>
+            <path d="m9 18 6-6-6-6"></path>
+        </div>
         </a>
 
         <a href="#" class="access-card card-pink">
-            <div class="card-icon dic">👥</div>
-            <h4>Sociologia</h4>
-            <p>Sociedade e Cultura</p>
+            <div class="card-icon">🇺🇸</div>
+            <h4>Inglês</h4>
+            <div class="mini-arrow">
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-chevron-right h-5 w-5 text-muted-foreground"><path d="m9 18 6-6-6-6"></path></svg>
+            <path d="m9 18 6-6-6-6"></path>
+        </div>
         </a>
 
-        <a href="#" class="access-card card-blue">
-            <div class="card-icon pro">💻</div>
+        <a href="#" class="access-card card-pink">
+            <div class="card-icon">⚽</div>
+            <h4>Educação Física</h4>
+            <div class="mini-arrow">
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-chevron-right h-5 w-5 text-muted-foreground"><path d="m9 18 6-6-6-6"></path></svg>
+            <path d="m9 18 6-6-6-6"></path>
+        </div>
+        </a>
+
+        <a href="#" class="access-card card-pink">
+            <div class="card-icon">🧬</div>
+            <h4>Biologia</h4>
+            <div class="mini-arrow">
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-chevron-right h-5 w-5 text-muted-foreground"><path d="m9 18 6-6-6-6"></path></svg>
+            <path d="m9 18 6-6-6-6"></path>
+        </div>
+        </a>
+
+        <a href="#" class="access-card card-pink">
+            <div class="card-icon">🤔</div>
+            <h4>Filosofia</h4>
+            <div class="mini-arrow">
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-chevron-right h-5 w-5 text-muted-foreground"><path d="m9 18 6-6-6-6"></path></svg>
+            <path d="m9 18 6-6-6-6"></path>
+        </div>
+        </a>
+
+        <a href="#" class="access-card card-pink">
+            <div class="card-icon">👥</div>
+            <h4>Sociologia</h4>
+            <div class="mini-arrow">
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-chevron-right h-5 w-5 text-muted-foreground"><path d="m9 18 6-6-6-6"></path></svg>
+            <path d="m9 18 6-6-6-6"></path>
+        </div>
+        </a>
+
+        <a href="#" class="access-card card-pink">
+            <div class="card-icon">💻</div>
             <h4>Informática</h4>
-            <p>Programação e Web</p>
+            <div class="mini-arrow">
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-chevron-right h-5 w-5 text-muted-foreground"><path d="m9 18 6-6-6-6"></path></svg>
+            <path d="m9 18 6-6-6-6"></path>
+        </div>
         </a>
     </div>
 </main>
+</div>
 
     <nav class="bottom-nav">
         <a href="home.html" class="nav-item">
@@ -127,6 +156,14 @@
                 <polyline points="9 22 9 12 15 12 15 22"></polyline>
             </svg>
             <span>Início</span>
+        </a>
+
+        <a href="#" class="nav-item active">
+            <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
+                <path d="M2 3h6a4 4 0 0 1 4 4v14a3 3 0 0 0-3-3H2z"></path>
+                <path d="M22 3h-6a4 4 0 0 0-4 4v14a3 3 0 0 1 3-3h7z"></path>
+            </svg>
+            <span>Matérias</span>
         </a>
 
         <a href="#" class="nav-item">
@@ -145,13 +182,7 @@
             <span>Blog</span>
         </a>
 
-        <a href="#" class="nav-item active">
-            <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
-                <path d="M2 3h6a4 4 0 0 1 4 4v14a3 3 0 0 0-3-3H2z"></path>
-                <path d="M22 3h-6a4 4 0 0 0-4 4v14a3 3 0 0 1 3-3h7z"></path>
-            </svg>
-            <span>Matérias</span>
-        </a>
+
 
         <a href="#" class="nav-item">
             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
@@ -161,6 +192,7 @@
             <span>Perfil</span>
         </a>
     </nav>
+
 
 </body>
 </html>
