--- a/home.html
+++ b/home.html
@@ -131,7 +131,7 @@
             <span>Início</span>
         </a>
         
-        <a href="#" class="nav-item">
+        <a href="materias.html" class="nav-item">
             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                 <path d="M2 3h6a4 4 0 0 1 4 4v14a3 3 0 0 0-3-3H2z"></path>
                 <path d="M22 3h-6a4 4 0 0 0-4 4v14a3 3 0 0 1 3-3h7z"></path>
