Centralização da página home

--- a/home.html
+++ b/home.html
@@ -8,13 +8,14 @@
 </head>
 <body>
 
-<header class="dashboard">
-    <div class="dashboard-top">
-        <div class="user">
-            <div class="user-text">
-                <h1>Olá, Aluno 👋</h1>
-            </div>
-        </div>
+    <div class="center">
+        <header class="dashboard">
+            <div class="dashboard-top">
+                <div class="user">
+                    <div class="user-text">
+                        <h1>Olá, Aluno 👋</h1>
+                    </div>
+                </div>
         <button class="notify">
             🔔
         </button>
@@ -47,7 +48,8 @@
 <!--Acesso Rápido -->
     <main class="main-content">
         <h3 class="section-title">Acesso Rápido</h3>
-
+        <hr>
+        <br>
         <div class="quick-access-grid">
             <a href="#" class="access-card card-pink">
                 <div class="card-icon sim">
@@ -165,7 +167,7 @@
             <span>Perfil</span>
         </a>
     </nav>
-
+</div>
 
 <!---<nav class="bottom-nav">
     <a href="#" class="bottom-item active">
